@@ -1,7 +1,9 @@
 `anovacca` <-
     function(object, ..., permutations = how(nperm=999), by = NULL,
-             strata = NULL) 
+             model = c("reduced", "direct", "full"),
+             parallel = getOption("mc.cores"), strata = NULL) 
 {
+    model <- match.arg(model)
     if (!exists(".Random.seed", envir = .GlobalEnv,
                 inherits = FALSE)) 
         runif(1)
@@ -32,15 +34,7 @@
     dotargs <- list(...)
     ## we do not want to give dotargs to anova.ccalist, but we
     ## evaluate 'parallel' and 'model' here
-    if (is.null(dotargs$model))
-        model <- "reduced"
-    else
-        model <- dotargs$model
-    if (is.null(dotargs$parallel))
-        parallel <- NULL
-    else
-        parallel <- dotargs$parallel
-    if (length(dotargs)) {
+     if (length(dotargs)) {
         isCCA <- sapply(dotargs, function(z) inherits(z, "cca"))
         if (any(isCCA)) {
             dotargs <- dotargs[isCCA]
@@ -55,12 +49,15 @@
     }
     ## by cases
     if (!is.null(by)) {
-        by <- match.arg(by, c("terms", "margin"))
+        by <- match.arg(by, c("terms", "margin", "axis"))
         sol <- switch(by,
                       "terms" = anovacca.byterm(object,
                       permutations = permutations,
                       model = model, parallel = parallel),
                       "margin" = anovacca.bymargin(object,
+                      permutations = permutations,
+                      model = model, parallel = parallel),
+                      "axis" = anovacca.byaxis(object,
                       permutations = permutations,
                       model = model, parallel = parallel))
         return(sol)
